# OmniOCR

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  __main__.py  api.py  cli.py  docker-compose.yml  index.html  mkdocs.yml  ocr_batch.py  ocr_engine.py  pos tprocessor.py  preprocessor.py  pyproject.toml  release-note.md  requirements-optional.txt  requirements.txt  requirements_api.txt  test_ocr.py  ui_streamlit.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  funding.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-docker.yml  publish-pypi.yml  python-ci.yml
ARCHITECTURE/: index.html
CHANGELOG/: index.html
CITATIONS/: index.html
DATASETS/: index.html
LICENSES/: index.html
MODELS/: index.html
ROADMAP/: index.html
about/: index.html
api/: index.html
batch/: ocr_batch.py
cli/: index.html
core/: ocr_engine.py  postprocessor.py  preprocessor.py
core/ai/: lang_detect.py  post_correction.py
desktop/: .gitignore  CHANGELOG.md  LICENSE  README.md  lang_detect.py  main_windows.py  ocr_batch.py  ocr_export.py  ocr_gui.py  ocr_image.py  ocr_pdf.py  ocr_video.py  requirements.txt
desktop/styles/: material.css
docs/: ARCHITECTURE.md  CHANGELOG.md  CITATIONS.md  DATASETS.md  LICENSES.md  MODELS.md  ROADMAP.md  about.md  api.md  cli.md  faq.md  getting_started.md  index.html  index.md  optional.md
faq/: index.html
getting_started/: index.html
interface/: api.py  ui_streamlit.py  web_ui.py
mobile/: README_mobile.md
mobile/androidApp/: MainActivity.kt
mobile/iosApp/: App.swift  composeView.swift
mobile/ocr-core/: OcrEngine.kt  OcrEngine_Android.kt  OcrEngine_ios.kt  build.gradle.kts
mobile/ocr-core/cpp/: CMakeLists.txt  OcrBridge.cpp
search/: search_index.json
tests/: README.md  test_api.py  test_cli.py  test_core_ocr.py  test_ocr.py  test_ocr_batch.py  test_ocr_image.py  test_postprocessor_lang.py
(+28 files in other folders)
