[project]
name = "omniocr"
version = "0.1.0"
description = "Modular, offline-first, AI-enhanced OCR framework."
authors = [
  { name="GeekNeuron", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
omniocr = "omniocr.cli:typer_app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.dependencies]
typer = "^0.9.0"
pillow = "^9.0.0"
langdetect = "^1.0.9"
torch = "*"
transformers = "*"
pytesseract = "*"
easyocr = "*"
fastapi = "*"
streamlit = "*"
uvicorn = "*"
PySide6 = "*"
