[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniocr"
version = "0.1.0"
description = "Modular, offline-first OCR engine with AI and multi-platform UI"
authors = [
    { name = "GeekNeuron" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytesseract",
    "opencv-python",
    "Pillow",
    "easyocr",
    "langdetect",
    "transformers",
    "torch",
    "sentencepiece",
    "fastapi",
    "uvicorn",
    "streamlit",
    "typer[all]",
    "PySide6",
    "tqdm",
    "pytest",
    "pytest-mock",
    "python-multipart",
    "scikit-image"
]

[project.scripts]
omniocr = "omniocr.__main__:app"
